# funding_arbs

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ANALYSIS.md  Dockerfile  LICENSE  README.md  audit_data.py  diagnostics.py  docker-compose.yml  explore_data.py  generate_tearsheets.py  plot_sweep_results.py  pyproject.toml  run_bidirectional_sweep.py  run_parameter_sweep.py  run_single_config.py  shields.json  validate_alignment.py
.github/workflows/: backtest.yml  ci.yml
backtest/: __init__.py  enhanced_engine.py  fee_model.py  portfolio.py  report.py  runner.py  simulator.py
config/: default.yaml  fees.yaml  universe.yaml
data/: README.md  __init__.py  db.py  downloader.py  oi_fetcher.py  schemas.py  spot_prices.py
docs/: architecture.md  strategy.md
notebooks/: 01_data_exploration.ipynb  02_funding_term_structure.ipynb  03_kalman_hedge_ratio.ipynb  04_full_backtest.ipynb
reports/baseline/: equity_curve.csv  metrics.json  tearsheet.html  trade_log.csv
reports/sweep/: metrics_carry_concentrated.json  metrics_carry_strict.json  tearsheet_carry_strict.html  tearsheet_carry_ts_moderate.html
research/: __init__.py  basis_momentum.py  funding_zscore.py  kalman_hedge.py  oi_concentration.py  term_structure.py
results/baseline/: metrics.json  tearsheet.html
results/sweep/: all_metrics.json  bidirectional_metrics.json  metrics_carry_diversified.json  metrics_carry_moderate.json  metrics_carry_relaxed.json  (+12 more)
tests/: test_downloader.py  test_fee_model.py  test_kalman.py  test_regression.py  test_signals.py  test_simulator.py
